v9 mest css nya saker

--- a/navigation.html
+++ b/navigation.html
@@ -9,11 +9,37 @@
 </head>
 <body>
     <div id="thedesktop">
-        <div class="folder"> 
-
+        <div class="theicons"> 
+            <div id="left">
+                <img src="img/painticon.png" alt="Paint Icon">
+                <img src="img/Internet-Explorer-Logo-2005.png" alt="Internet Explorer Icon">
+                <img src="img/folder.png" alt="Folder Icon">
+            </div>
+            <div id="right">
+                <img src="img/worldicon.png" alt="World Icon">
+                <img src="img/icontwopeople.png">
+            </div>
         </div>
         
         <div id="notepad">
+            <div id="beforeclick"> 
+                <header> 
+                    <p> Internet Archive Catalogue </p>
+                </header>
+                <main>
+                    <div id="maininfo">
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ullam earum iste corporis voluptate, iusto officia itaque laborum consequuntur. Molestiae recusandae neque doloremque eos eius ex minus ea iure incidunt! </p>
+                    </div>
+                    <div id="gif">
+                        <img src="img/gifworldspinning.gif">
+                    </div>
+                </main>
+                <section>
+                    <p> ready? just click an icon to find out what it beholds... </p>
+                </section>
+            </div>
+
+            <div id="afterclick"
 
         </div>
 
