--- a/navigation.html
+++ b/navigation.html
@@ -11,13 +11,14 @@
     <div id="thedesktop">
         <div class="theicons"> 
             <div id="left">
+                <img src="img/icontwopeople.png" alt="Icon with two people">
                 <img src="img/painticon.png" alt="Paint Icon">
                 <img src="img/Internet-Explorer-Logo-2005.png" alt="Internet Explorer Icon">
-                <img src="img/folder.png" alt="Folder Icon">
             </div>
             <div id="right">
                 <img src="img/worldicon.png" alt="World Icon">
-                <img src="img/icontwopeople.png">
+                <img src="img/computericon.png" alt="Computer Icon">
+                
             </div>
         </div>
         
@@ -28,18 +29,18 @@
                 </header>
                 <main>
                     <div id="maininfo">
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ullam earum iste corporis voluptate, iusto officia itaque laborum consequuntur. Molestiae recusandae neque doloremque eos eius ex minus ea iure incidunt! </p>
+                        <p> a collection of websites about y2k technology and internet culture  </p>
                     </div>
                     <div id="gif">
-                        <img src="img/gifworldspinning.gif">
+                        <img src="img/gifworldspinning.gif" alt="A spinning world image, with the text Welcome to my homepage wrapped around it in a ring.">
                     </div>
                 </main>
                 <section>
-                    <p> ready? just click an icon to find out what it beholds... </p>
+                    <p> click an icon to find out what it beholds... </p>
                 </section>
             </div>
 
-            <div id="afterclick"
+            <div id="afterclick">
 
         </div>
 
