inte mycket progress
försöker fixa css problem

--- a/navigation.html
+++ b/navigation.html
@@ -22,8 +22,9 @@
             </div>
         </div>
         
-        <div id="notepad">
-            <div id="beforeclick"> 
+        <div id="areafornotepad">
+            <div id="notepad">
+                <div id="beforeclick"> 
                 <header> 
                     <p> Internet Archive Catalogue </p>
                 </header>
@@ -38,6 +39,7 @@
                 <section>
                     <p> click an icon to find out what it beholds... </p>
                 </section>
+                </div>
             </div>
 
             <div id="afterclick">
