stora css ändringar wow
saker

--- a/myspace.html
+++ b/myspace.html
@@ -6,25 +6,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/myspace.css">
+    
 </head>
 <body>
     <div id="allcontent">
         <header>
-            <p> hii </p>
+            <p> 
+                <b>MySpace</b> 
+            </p>
+            <div class="thegifs">
+                <img src="/img/e37.gif" alt="">
+                <img src="/img/e55.gif">
+                <img src="/img/b38.gif">
+                <img src="/img/e118.gif">
+            </div>
 
         </header>
 
-        <section>
+        <div id="secasi">
+            <div id="secone">
 
 
+                <div id="secbox">
+                    <img id="myspacelogo" src="/img/Myspace-logo.png" alt="The Myspace logo">
+                    <ul>
+                        <li> 
+                            <b>Founded</b>	August 1, 2003; 21 years ago
+                        </li>
+                        <li> 
+                            <b>Founder(s)</b>	
+                            Chris DeWolfe
+                            Tom Anderson
+                            Jon Hart 
+                        </li>
+                        <li>
+                            <b>Type of site</b>	Social networking service 
+                        </li>
+                        <li>
+                            <b>Area served</b>	Worldwide
+                        </li>
+                        <li> 
+                            <b>Registration</b>	Required
+                        </li>
+                        <li>
+                            <b>Current status</b>	Active
+                        </li>
+                        <li>
+                            <b>Available in</b>	14 languages
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+
+             <aside>
+                <button> play gif? </button>
+                <button> night mode </button>
+
+            </aside>
+        </div>
+
+        <main>
+            <div class="mainone">
+                <p> The claim to the title of ‘oldest social media platform in the world’ is a highly contested one, but Myspace is a worthy competitor. Though there have been other sites active before its launch (such as Six Degrees and Friendster) Myspace was the first platform of its kind that is reminiscent of social media of today- with its enormous capabilities for user modification on their personal pages, the site quickly gained traction online.
+                </p>
+                <p> Launched on August 1st , 2003, the site (originally named ‘Sitegist’) was started as a college project by senior Chris DeWolfe during his last year at USC. Upon graduating, he began work at eUniverse, a mixed media company, along with fellow alumni Tom Anderson, where they together further developed the site into Myspace.
+                </p>
+
+            </div>
+
+            <img class="images" src="/img/MtALFFfxvq.png">
+
+            <div class="mainone">
+
+                <p>On March 10, 2010, Myspace added new features including a recommendation engine for new users that suggests games, music and videos based on their previous search habits. The security on Myspace was also enhanced, with the criticism of Facebook, to make it a safer site. The security of Myspace enables users to choose if the content could be viewed for "friends only", "18 and older" or "everyone".[106]
+                </p>
+                <p> In October 2010, Myspace introduced a beta version of a new site design on a limited scale, with plans to switch all interested users to the new site in late November. Chief executive Mike Jones said the site was no longer competing with Facebook as a general social networking site; instead, it would be music-oriented and would target younger people. Jones believed most younger users would continue to use the site after the redesign, though older users might not. The goal of the redesign was to increase the number of Myspace users and the time they spent on the site. BTIG (.com) analyst Richard Greenfield said, "Most investors have written off MySpace now," and was unsure whether the changes would help the company recover.[107]
+                </p> 
+                <p> In November 2010, Myspace changed its logo to coincide with the new site design. The word "my" appears in the Helvetica font, followed by a symbol representing a space. The logo change was announced on October 8, 2010, and appeared on the site on November 11.[108] In the same month, Myspace integrated with Facebook Connect – calling it "Mash Up with Facebook" in an announcement widely seen as the final act of acknowledging Facebook's domination of social networking.[109]
+                </p> 
+            
+            </div>
+            <img class="images" src="img/mss.jpg">
+            <div class="mainone">
+
+
+                <p> Besides finding and contacting new friends, you can use MySpace to:
+
+                    <li>Create your own blog</li>
+                    <li>Rank other peoples' profile photos</li>
+                    <li>Grade your college professors</li>
+                    <li>Post and view events going on in your area</li>
+                    <li>Play games</li>
+                    <li>Post and view classified ads</li>
+                    <li>Discover new music and artists at MySpace Music</li>    
+                </p>
+                <p>While MySpace may have experienced a noteworthy downfall, it simultaneously paved the way for future social networking platforms to excel. MySpace played an influential part in shaping the direction of contemporary social networking platforms. The once popular social site left a lasting impact on social networking giants such as Instagram and Twitter. One of the most noteworthy characteristics includes Instagram’s focus specifically on photo sharing and Twitter’s reputation for users to share statuses, aspects that circle back to the influence of MySpace (Zahn, 2021). MySpace nearly pioneered these characteristics for later platforms to revamp and enhance.
+                </p>
+                <p> Check out this gallery of old MySpace layouts:</p>
+            </div>
+
+        </main>
+        <section id="gallery">      
+            <img src="/img/ms3.png">
+            <img src="/img/ms1.jpg">
+            <img src="/img/ms5.jpg">
+            <img src="/img/ms4.jpg">
+            <img src="/img/ms2.jpg" alt="an old 'Soulja Boy' themed custom myspace page.">
         </section>
-
-
-        <aside>
-
-
-        </aside>
-
 
     </div>
 </body>
