--- a/navigation.html
+++ b/navigation.html
@@ -23,6 +23,11 @@
         </div>
         
         <div id="areafornotepad">
+            <div id="accessible">
+                <button> play gif? </button>
+                <button> night mode </button>
+            </div>
+
             <div id="notepad">
                 <div id="beforeclick"> 
                 <header> 
